<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/AppbarTitle2"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleTextAppearance="@style/AppbarTitle1"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="@string/label_cart">


                <ImageView
                    android:id="@+id/image_expanded"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorAccentLight1" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin">

                </com.google.android.material.appbar.MaterialToolbar>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <include
                    android:id="@+id/layout_shop"
                    layout="@layout/item_shop_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_food_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_cart_product">

                </androidx.recyclerview.widget.RecyclerView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:checked="true"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/label_pickup" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radio_delivery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/label_delivery" />

                    <TextView
                        android:id="@+id/text_delivery_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="center|end"
                        android:minWidth="60dp"
                        android:text="₹0"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">


                    <ImageView
                        android:id="@+id/image_veg"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:background="@android:color/white"
                        android:src="@drawable/ic_info"
                        android:tint="@color/colorAccent" />


                    <TextView
                        android:id="@+id/text_food_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center|start"
                        android:text="@string/label_to_pay"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <include
                        android:id="@+id/layoutQuantityControl"
                        layout="@layout/inc_dec_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:visibility="invisible" />


                    <TextView
                        android:id="@+id/text_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="center|end"
                        android:minWidth="60dp"
                        android:text="₹50"
                        android:textColor="@color/colorAccent"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#F7F7F7"
                    android:drawableStart="@drawable/ic_note"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center|start"
                    android:padding="16dp"
                    android:textStyle="bold"
                    tools:text="Any information to convey to Sathyas Main Canteen?" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EAEAEA" />

                <TextView
                    android:id="@+id/text_delivery_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#F7F7F7"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center|start"
                    android:padding="16dp"
                    android:text="@string/label_enter_delivery_location"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/layout_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_cart_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/label_no_items_in_cart" />
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>